--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9"
+        "laravel/framework": "^12.0",
+        "laravel/tinker": "^2.9",
+        "yajra/laravel-datatables-buttons": "12.0",
+        "yajra/laravel-datatables-html": "12.0",
+        "yajra/laravel-datatables-oracle": "12.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
